--- a/app_save_path_definitions.json
+++ b/app_save_path_definitions.json
@@ -1,5 +1,5 @@
 {
-    "version": "1.3.4.0",
+    "version": "1.3.5.0",
     "USERDATA": {
         "folder": "|STEAMINSTALLDIR|/userdata"
     },
@@ -3009,13 +3009,187 @@
     "16000": {
         "folder": "|TBD|"
     },
-    "16450": {
+    "16020": {
         "folder": "|TBD|"
+    },
+    "16030": {
+        "folder": "|TBD|"
+    },
+    "16040": {
+        "folder": "|TBD|"
+    },
+    "16060": {
+        "folder": "|TBD|"
+    },
+    "16090": {
+        "folder": "|TBD|"
+    },
+    "16100": {
+        "folder": "|TBD|"
+    },
+    "16110": {
+        "folder": "|TBD|"
+    },
+    "16120": {
+        "folder": "|TBD|"
+    },
+    "16130": {
+        "folder": "|TBD|"
+    },
+    "16140": {
+        "folder": "|TBD|"
+    },
+    "16150": {
+        "folder": "|TBD|"
+    },
+    "16160": {
+        "folder": "|TBD|"
+    },
+    "16170": {
+        "folder": "|TBD|"
+    },
+    "16180": {
+        "folder": "|TBD|"
+    },
+    "16190": {
+        "folder": "|TBD|"
+    },
+    "16200": {
+        "folder": "|TBD|"
+    },
+    "16210": {
+        "folder": "|TBD|"
+    },
+    "16300": {
+        "folder": "|TBD|"
+    },
+    "16400": {
+        "folder": "%USERPROFILE%/Documents/WBGames/FEAR2"
+    },
+    "16420": {
+        "folder": "%USERPROFILE%/Documents/WBGames/FEAR2"
+    },
+    "16450": {
+        "folder": "%USERPROFILE%/Documents/WBGames/FEAR2"
+    },
+    "16470": {
+        "folder": "%USERPROFILE%/Documents/WBGames/FEAR2"
+    },
+    "16480": {
+        "folder": "%USERPROFILE%/Documents/WBGames/FEAR2"
+    },
+    "16500": {
+        "folder": "|TBD|"
+    },
+    "16510": {
+        "folder": "|TBD|"
+    },
+    "16600": {
+        "folder": "%LOCALAPPDATA%/Redlynx/Trials 2 SE/1.0"
+    },
+    "16610": {
+        "folder": "%LOCALAPPDATA%/Redlynx/Trials 2 SE/1.0"
+    },
+    "16620": {
+        "folder": "|TBD|"
+    },
+    "16630": {
+        "folder": "|TBD|"
+    },
+    "16700": {
+        "folders": [
+            {
+                "Path": "%USERPROFILE%/Documents/Stronghold Crusader/Saves",
+                "FriendlyName": "Normal"
+            },
+            {
+                "Path": "%USERPROFILE%/Documents/Stronghold Crusader Extreme/Saves",
+                "FriendlyName": "Extreme"
+            }
+        ]
+    },
+    "16710": {
+        "folder": "|PATHTOGAME|/profiles"
+    },
+    "16720": {
+        "folder": "%USERPROFILE%/Documents/My Games/Velvet Assassin"
     },
     "16730": {
+        "folder": "%USERPROFILE%/Documents/My Games/Legendary/PandoraGame/Checkpoints"
+    },
+    "16740": {
+        "folder": "%USERPROFILE%/Documents/My Games/Civilization IV Colonization/Saves"
+    },
+    "16820": {
+        "folder": "|NA|"
+    },
+    "16830": {
+        "folder": "|NA|"
+    },
+    "16840": {
         "folder": "|TBD|"
     },
-    "16810": {
+    "16850": {
+        "folder": "|TBD|"
+    },
+    "16860": {
+        "folder": "|TBD|"
+    },
+    "16870": {
+        "folder": "|TBD|"
+    },
+    "16900": {
+        "folder": "%USERPROFILE%/Documents/GroundBranch"
+    },
+    "17000": {
+        "folder": "|TBD|"
+    },
+    "17010": {
+        "folder": "|TBD|"
+    },
+    "17020": {
+        "folder": "|TBD|"
+    },
+    "17030": {
+        "folder": "|TBD|"
+    },
+    "17040": {
+        "folder": "|TBD|"
+    },
+    "17050": {
+        "folder": "|TBD|"
+    },
+    "17060": {
+        "folder": "|TBD|"
+    },
+    "17070": {
+        "folder": "|TBD|"
+    },
+    "17080": {
+        "folder": "|TBD|"
+    },
+    "17100": {
+        "folder": "%USERPROFILE%/Documents/Tilted Mill/Children of the Nile/Saved Games"
+    },
+    "17110": {
+        "folder": "|TBD|"
+    },
+    "17120": {
+        "folder": "|TBD|"
+    },
+    "17130": {
+        "folder": "%USERPROFILE%/Documents/Tilted Mill/Hinterland/saves"
+    },
+    "17160": {
+        "folder": "|TBD|"
+    },
+    "17170": {
+        "folder": "|TBD|"
+    },
+    "17180": {
+        "folder": "|TBD|"
+    },
+    "17200": {
         "folder": "|TBD|"
     },
     "17300": {
@@ -3388,7 +3562,7 @@
         "folder": "|TBD|"
     },
     "57900": {
-        "folder": "|TBD|"
+        "folder": "|IN_USER_DATA|"
     },
     "63380": {
         "folder": "%LOCALAPPDATA%/SniperV2/PC_ProfileSaves"
@@ -3985,7 +4159,7 @@
         "folder": "|TBD|"
     },
     "255280": {
-        "folder": "|TBD|"
+        "folder": "%USERPROFILE%/AppData/LocalLow/Daedalic Entertainment/1954 Alcatraz"
     },
     "255320": {
         "folder": "|TBD|"
