--- a/app_save_path_definitions.json
+++ b/app_save_path_definitions.json
@@ -1,5 +1,5 @@
 {
-    "version": "1.3.9.0",
+    "version": "1.3.10.0",
     "USERDATA": {
         "folder": "|STEAMINSTALLDIR|/userdata"
     },
@@ -4070,20 +4070,218 @@
     "24000": {
         "folder": "|TBD|"
     },
+    "24010": {
+        "folder": "|TBD|"
+    },
+    "24020": {
+        "folder": "|TBD|"
+    },
+    "24030": {
+        "folder": "|TBD|"
+    },
+    "24040": {
+        "folder": "|TBD|"
+    },
+    "24050": {
+        "folder": "|TBD|"
+    },
+    "24060": {
+        "folder": "|TBD|"
+    },
+    "24070": {
+        "folder": "|TBD|"
+    },
+    "24080": {
+        "folder": "|TBD|"
+    },
+    "24090": {
+        "folder": "|TBD|"
+    },
+    "24100": {
+        "folder": "|TBD|"
+    },
+    "24110": {
+        "folder": "|TBD|"
+    },
+    "24120": {
+        "folder": "|TBD|"
+    },
+    "24130": {
+        "folder": "|TBD|"
+    },
+    "24140": {
+        "folder": "|TBD|"
+    },
+    "24150": {
+        "folder": "|TBD|"
+    },
+    "24160": {
+        "folder": "|TBD|"
+    },
+    "24170": {
+        "folder": "|TBD|"
+    },
+    "24180": {
+        "folder": "|TBD|"
+    },
+    "24190": {
+        "folder": "|TBD|"
+    },
+    "24200": {
+        "folder": "|TBD|"
+    },
+    "24210": {
+        "folder": "|TBD|"
+    },
+    "24220": {
+        "folder": "|TBD|"
+    },
+    "24230": {
+        "folder": "|TBD|"
+    },
     "24240": {
+        "folders": [
+            {
+                "Path": "%LOCALAPPDATA%/PAYDAY/saves",
+                "FriendlyName": "Windows"
+            },
+            {
+                "Path": "|IN_USER_DATA|",
+                "FriendlyName": "Steam"
+            }
+        ]
+    },
+    "24400": {
+        "folder": "|TBD|"
+    },
+    "24410": {
+        "folder": "|TBD|"
+    },
+    "24420": {
+        "folder": "|PATHTOGAME|/save"
+    },
+    "24430": {
+        "folder": "|TBD|"
+    },
+    "24440": {
+        "folder": "|TBD|"
+    },
+    "24450": {
+        "folder": "|NA|"
+    },
+    "24460": {
+        "folder": "|TBD|"
+    },
+    "24470": {
+        "folder": "|TBD|"
+    },
+    "24480": {
+        "folder": "|TBD|"
+    },
+    "24500": {
+        "folder": "%USERPROFILE%/Documents/Aspyr/Dreamkiller/Saves"
+    },
+    "24600": {
+        "folder": "|TBD|"
+    },
+    "24610": {
+        "folder": "|TBD|"
+    },
+    "24620": {
+        "folder": "|TBD|"
+    },
+    "24630": {
+        "folder": "|TBD|"
+    },
+    "24640": {
+        "folder": "|TBD|"
+    },
+    "24650": {
+        "folder": "|TBD|"
+    },
+    "24660": {
         "folder": "|TBD|"
     },
     "24670": {
         "folder": "|TBD|"
     },
-    "24740": {
+    "24700": {
         "folder": "|TBD|"
+    },
+    "24710": {
+        "folder": "|TBD|"
+    },
+    "24720": {
+        "folders": [
+            {
+                "Path": "%APPDATA%/Spore/Games",
+                "FriendlyName": "Game"
+            },
+            {
+                "Path": "%USERPROFILE%/Documents/My Spore Creations",
+                "FriendlyName": "Creations"
+            }
+        ]
+    },
+    "24740": {
+        "folder": "%LOCALAPPDATA%/Criterion Games/Burnout Paradise/Save"
+    },
+    "24760": {
+        "folder": "|TBD|"
+    },
+    "24770": {
+        "folder": "|TBD|"
+    },
+    "24780": {
+        "folder": "%USERPROFILE%/Documents/SimCity 4/Regions"
+    },
+    "24790": {
+        "folder": "%USERPROFILE%/Saved Games/Command and Conquer 3 Tiberium Wars"
     },
     "24800": {
+        "folder": "%USERPROFILE%/Saved Games/Red Alert 3"
+    },
+    "24810": {
+        "folder": "%USERPROFILE%/Saved Games/Command & Conquer 3 Kanes Wrath"
+    },
+    "24820": {
         "folder": "|TBD|"
     },
+    "24830": {
+        "folder": "%USERPROFILE%/Documents/EA Games/The Godfather™ II"
+    },
     "24840": {
+        "folder": "%USERPROFILE%/Documents/EA Games/Medal of Honor Airborne(tm)/Saved"
+    },
+    "24850": {
         "folder": "|TBD|"
+    },
+    "24860": {
+        "folder": "|TBD|"
+    },
+    "24870": {
+        "folder": "%USERPROFILE%/Documents/NFS SHIFT"
+    },
+    "24880": {
+        "folder": "%USERPROFILE%/Documents/My Games/The Saboteur™/SaveGames"
+    },
+    "24920": {
+        "folder": "|TBD|"
+    },
+    "24940": {
+        "folder": "%USERPROFILE%/Documents/EA Games/Medal of Honor Pacific Assault(tm)"
+    },
+    "24950": {
+        "folder": "|TBD|"
+    },
+    "24960": {
+        "folder": "%USERPROFILE%/Documents/BFBC2"
+    },
+    "24980": {
+        "folder": "%USERPROFILE%/Documents/BioWare/Mass Effect 2"
+    },
+    "25000": {
+        "folder": "%USERPROFILE%/Documents/Wolfire"
     },
     "31100": {
         "folder": "|TBD|"
